--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-imagemin": "^3.3.0",
     "gulp-postcss": "^7.0.0",
     "gulp-sourcemaps": "^2.6.0",
+    "gulp-stylus": "^2.6.0",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.2",
     "run-sequence": "^2.0.0"
