--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.3.0",
     "gulp-postcss": "^7.0.0",
-    "gulp-sourcemaps": "^2.6.0",
+    "gulp-prettify": "^0.5.0",
+    "gulp-pug": "^3.3.0",
     "gulp-stylus": "^2.6.0",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.2",
+    "pug": "^2.0.0-rc.3",
     "run-sequence": "^2.0.0"
   }
 }
