--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.2",
     "pug": "^2.0.0-rc.3",
-    "run-sequence": "^2.0.0"
+    "run-sequence": "^2.0.0",
+    "smooth-scroll": "github:cferdinandi/smooth-scroll"
   }
 }
