--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.6",
     "gulp-cssnano": "^2.1.2",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.3.0",
     "gulp-postcss": "^7.0.0",
     "gulp-prettify": "^0.5.0",
