Moved to trash in Gulp cleanup task

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
             "error",
             "never"
         ],
-        "no-undef": "off"
+		"no-undef": "off",
+		"no-console": "off"
     }
 }
