--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.13",
-    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-cache": "^0.4.6",
@@ -39,9 +38,12 @@
     "gulp-uglify": "^3.0.0",
     "pug": "^2.0.0-rc.3",
     "run-sequence": "^2.0.0",
-    "stylus": "^0.54.5"
+    "stylus": "^0.54.5",
+    "trash": "^4.0.1"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   }
 }
