--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,8 +19,8 @@
 				"bracketSpacing": true
 			}
 		],
+		"quotes": ["error", "backtick"],
 		"linebreak-style": ["error", "unix"],
-		"no-undef": "off",
-		"no-console": "off"
+		"no-undef": "off"
 	}
 }
