--- a/package.json
+++ b/package.json
@@ -1,51 +1,67 @@
 {
-	"name": "portfolio",
-	"version": "2.0.0",
-	"description": "Portfolio website of Nico Salvador",
-	"main": "scripts.js",
-	"scripts": {
-		"dev": "gulp watch",
-		"build": "gulp build"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/salvadornico/salvadornico.github.io.git"
-	},
-	"author": "Nico Salvador",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/salvadornico/salvadornico.github.io/issues"
-	},
-	"homepage": "http://salvadornico.com",
-	"dependencies": {
-		"smooth-scroll": "github:cferdinandi/smooth-scroll"
-	},
-	"devDependencies": {
-		"autoprefixer": "^7.1.4",
-		"babel-cli": "^6.26.0",
-		"babel-preset-es2015": "^6.24.1",
-		"browser-sync": "^2.18.13",
-		"eslint": "^4.7.1",
-		"eslint-config-prettier": "^2.5.0",
-		"eslint-plugin-prettier": "^2.3.1",
-		"gulp": "^3.9.1",
-		"gulp-babel": "^7.0.0",
-		"gulp-cache": "^0.4.6",
-		"gulp-concat": "^2.6.1",
-		"gulp-cssnano": "^2.1.2",
-		"gulp-imagemin": "^3.3.0",
-		"gulp-postcss": "^7.0.0",
-		"gulp-prettify": "^0.5.0",
-		"gulp-pug": "^3.3.0",
-		"gulp-stylus": "^2.6.0",
-		"gulp-uglify": "^3.0.0",
-		"prettier": "^1.7.0",
-		"pug": "^2.0.0-rc.4",
-		"run-sequence": "^2.2.0",
-		"stylus": "^0.54.5",
-		"trash": "^4.1.0"
-	},
-	"babel": {
-		"presets": ["es2015"]
-	}
+  "name": "portfolio_v3",
+  "version": "1.0.0",
+  "description": "Nico's portfolio v3",
+  "author": "Nico <salvador.nico@gmail.com>",
+  "private": true,
+  "scripts": {
+    "dev": "node build/dev-server.js",
+    "start": "npm run dev",
+    "build": "node build/build.js",
+    "lint": "eslint --ext .js,.vue src"
+  },
+  "dependencies": {
+    "vue": "^2.4.2",
+    "vue-router": "^2.7.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "chalk": "^2.0.1",
+    "connect-history-api-fallback": "^1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.0",
+    "eslint": "^3.19.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^3.0.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.4",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^2.30.1",
+    "http-proxy-middleware": "^0.17.3",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.2.0",
+    "rimraf": "^2.6.0",
+    "url-loader": "^0.5.8",
+    "vue-loader": "^13.0.4",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.4.2",
+    "portfinder": "^1.0.13",
+    "webpack": "^3.6.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-merge": "^4.1.0"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
