--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"lodash": "^4.17.4",
+		"smooth-scroll": "^12.1.5",
 		"vue": "^2.4.2",
 		"vue-resource": "^1.3.4",
 		"vue-router": "^3.0.1"
