--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "node build/dev-server.js",
-		"serve": "export FLASK_DEBUG=1 && export FLASK_APP=app.py && flask run",
-		"start": "npm run dev",
+		"serve": "set FLASK_DEBUG=1 && set FLASK_APP='app.py' && flask run",
+		"start": "npm-run-all --parallel dev serve",
 		"build": "node build/build.js",
 		"lint": "eslint --ext .js,.vue src"
 	},
@@ -48,6 +48,7 @@
 		"friendly-errors-webpack-plugin": "^1.1.3",
 		"html-webpack-plugin": "^2.28.0",
 		"http-proxy-middleware": "^0.17.3",
+		"npm-run-all": "^4.1.1",
 		"opn": "^5.1.0",
 		"optimize-css-assets-webpack-plugin": "^2.0.0",
 		"ora": "^1.2.0",
