Updated Python path

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
 	"prettier.semi": false,
-	"prettier.useTabs": true
+	"prettier.useTabs": true,
+	"python.pythonPath": "C:\\Users\\Nico\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe"
 }
