--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"dev": "node build/dev-server.js",
 		"start": "yarn run dev",
-		"build": "node build/build.js",
+		"build": "node build/build.js && firebase deploy",
 		"lint": "eslint --ext .js,.vue src"
 	},
 	"dependencies": {
