--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"eslint-plugin-html": "^3.0.0",
 		"eslint-plugin-promise": "^3.4.0",
 		"eslint-plugin-standard": "^2.0.1",
+		"eslint-plugin-vue": "^4.0.1",
 		"eventsource-polyfill": "^0.9.6",
 		"express": "^4.14.1",
 		"extract-text-webpack-plugin": "^2.0.0",
@@ -59,7 +60,9 @@
 		"shelljs": "^0.7.6",
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.1",
+		"stylus-resources-loader": "^0.0.4",
 		"url-loader": "^0.5.8",
+		"vue-eslint-parser": "^2.0.1",
 		"vue-loader": "^13.0.4",
 		"vue-style-loader": "^3.0.3",
 		"vue-template-compiler": "^2.4.2",
@@ -73,5 +76,9 @@
 		"node": ">= 4.0.0",
 		"npm": ">= 3.0.0"
 	},
-	"browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	]
 }
