--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"smooth-scroll": "^12.1.5",
 		"vue": "^2.4.2",
 		"vue-resource": "^1.3.4",
-		"vue-router": "^3.0.1"
+		"vue-router": "^3.0.1",
+		"vuex": "^3.0.1"
 	},
 	"devDependencies": {
 		"autoprefixer": "^7.1.5",
