--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"optimize-css-assets-webpack-plugin": "^2.0.0",
 		"ora": "^1.2.0",
 		"portfinder": "^1.0.13",
+		"postcss-cssnext": "^3.1.0",
 		"pug": "^2.0.0-rc.4",
 		"pug-loader": "^2.3.0",
 		"rimraf": "^2.6.0",
