--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
 		"css-loader": "^0.28.7",
 		"cssnano": "^3.10.0",
 		"eslint": "^3.19.0",
+		"eslint-config-prettier": "^2.9.0",
 		"eslint-config-standard": "^6.2.1",
 		"eslint-friendly-formatter": "^3.0.0",
 		"eslint-loader": "^1.7.1",
 		"eslint-plugin-html": "^3.0.0",
+		"eslint-plugin-prettier": "^2.6.0",
 		"eslint-plugin-promise": "^3.4.0",
 		"eslint-plugin-standard": "^2.0.1",
 		"eslint-plugin-vue": "^4.0.1",
