--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"dev": "node build/dev-server.js",
 		"start": "yarn run dev",
 		"build": "node build/build.js && firebase deploy",
-		"lint": "eslint --ext .js,.vue src"
+		"lint": "eslint --ext .js,.vue src",
+		"fix": "eslint --ext .js,.vue src --fix"
 	},
 	"dependencies": {
 		"lodash": "^4.17.4",
@@ -44,7 +45,7 @@
 		"eslint-plugin-prettier": "^2.6.0",
 		"eslint-plugin-promise": "^3.4.0",
 		"eslint-plugin-standard": "^2.0.1",
-		"eslint-plugin-vue": "^4.0.1",
+		"eslint-plugin-vue": "^4.2.2",
 		"eventsource-polyfill": "^0.9.6",
 		"express": "^4.14.1",
 		"extract-text-webpack-plugin": "^2.0.0",
