--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"ora": "^1.2.0",
 		"portfinder": "^1.0.13",
 		"postcss-cssnext": "^3.1.0",
+		"prettier": "^1.10.2",
 		"pug": "^2.0.0-rc.4",
 		"pug-loader": "^2.3.0",
 		"rimraf": "^2.6.0",
