--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"start": "yarn run dev",
 		"build": "node build/build.js && firebase deploy",
 		"lint": "eslint --ext .js,.vue src",
-		"fix": "eslint --ext .js,.vue src --fix"
+		"fix": "eslint --ext .js,.vue src --fix",
+		"test": "npx cypress open"
 	},
 	"dependencies": {
 		"lodash": "^4.17.4",
@@ -36,6 +37,7 @@
 		"copy-webpack-plugin": "^4.1.1",
 		"css-loader": "^0.28.7",
 		"cssnano": "^3.10.0",
+		"cypress": "^1.4.1",
 		"eslint": "^3.19.0",
 		"eslint-config-prettier": "^2.9.0",
 		"eslint-config-standard": "^6.2.1",
@@ -83,9 +85,5 @@
 		"node": ">= 4.0.0",
 		"npm": ">= 3.0.0"
 	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not ie <= 8"
-	]
+	"browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
 }
