--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"eslint-config-standard": "^6.2.1",
 		"eslint-friendly-formatter": "^3.0.0",
 		"eslint-loader": "^1.7.1",
+		"eslint-plugin-cypress": "^2.0.1",
 		"eslint-plugin-html": "^3.0.0",
 		"eslint-plugin-prettier": "^2.6.0",
 		"eslint-plugin-promise": "^3.4.0",
