--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"extract-text-webpack-plugin": "^2.0.0",
 		"file-loader": "^0.11.1",
 		"friendly-errors-webpack-plugin": "^1.1.3",
+		"hoek": "^5.0.3",
 		"html-webpack-plugin": "^2.28.0",
 		"http-proxy-middleware": "^0.17.3",
 		"npm-run-all": "^4.1.1",
