--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 .DS_Store
-node_modules/
-dist/
+**/node_modules
+**/dist
+**/.cache
+/config/config.ts
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
