--- a/package.json
+++ b/package.json
@@ -1,95 +1,40 @@
 {
-	"name": "portfolio_v3",
-	"version": "1.0.0",
-	"description": "Nico's portfolio v3",
+	"name": "portfolio",
+	"version": "4.0.0",
+	"description": "Nico's portfolio",
 	"author": "Nico <salvador.nico@gmail.com>",
 	"private": true,
 	"scripts": {
-		"dev": "node build/dev-server.js",
-		"start": "yarn run dev",
-		"build": "node build/build.js && firebase deploy",
-		"lint": "eslint --ext .js,.vue src",
-		"fix": "eslint --ext .js,.vue src --fix",
-		"test": "npx cypress open"
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
+		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
-		"lodash": "^4.17.4",
-		"smooth-scroll": "^12.1.5",
-		"vue": "^2.4.2",
-		"vue-resource": "^1.3.4",
+		"vue": "^2.5.13",
+		"vue-class-component": "^6.0.0",
+		"vue-meta": "^1.4.3",
+		"vue-property-decorator": "^6.0.0",
 		"vue-router": "^3.0.1",
-		"vuex": "^3.0.1"
+		"vuex": "^3.0.1",
+		"vuex-class": "^0.3.0"
 	},
 	"devDependencies": {
-		"autoprefixer": "^7.1.5",
-		"babel-core": "^6.22.1",
-		"babel-eslint": "^7.1.1",
-		"babel-loader": "^7.1.1",
-		"babel-plugin-transform-object-rest-spread": "^6.26.0",
-		"babel-plugin-transform-runtime": "^6.22.0",
-		"babel-preset-env": "^1.3.2",
-		"babel-preset-stage-2": "^6.22.0",
-		"babel-register": "^6.22.0",
-		"browser-sync": "^2.18.13",
-		"browser-sync-webpack-plugin": "^1.2.0",
-		"chalk": "^2.0.1",
-		"connect-history-api-fallback": "^1.3.0",
-		"copy-webpack-plugin": "^4.1.1",
-		"css-loader": "^0.28.7",
-		"cssnano": "^3.10.0",
-		"cypress": "1.4.2",
-		"eslint": "^3.19.0",
-		"eslint-config-prettier": "^2.9.0",
-		"eslint-config-standard": "^6.2.1",
-		"eslint-friendly-formatter": "^3.0.0",
-		"eslint-loader": "^1.7.1",
-		"eslint-plugin-cypress": "^2.0.1",
-		"eslint-plugin-html": "^3.0.0",
-		"eslint-plugin-prettier": "^2.6.0",
-		"eslint-plugin-promise": "^3.4.0",
-		"eslint-plugin-standard": "^2.0.1",
-		"eslint-plugin-vue": "^4.2.2",
-		"eventsource-polyfill": "^0.9.6",
-		"express": "^4.14.1",
-		"extract-text-webpack-plugin": "^2.0.0",
-		"file-loader": "^0.11.1",
-		"friendly-errors-webpack-plugin": "^1.1.3",
-		"hoek": "^5.0.3",
-		"html-webpack-plugin": "^2.28.0",
-		"http-proxy-middleware": "^0.17.3",
-		"npm-run-all": "^4.1.1",
-		"opn": "^5.1.0",
-		"optimize-css-assets-webpack-plugin": "^2.0.0",
-		"ora": "^1.2.0",
-		"portfinder": "^1.0.13",
+		"@vue/cli-plugin-babel": "^3.0.0-beta.1",
+		"@vue/cli-plugin-typescript": "^3.0.0-beta.1",
+		"@vue/cli-service": "^3.0.0-beta.1",
 		"postcss-cssnext": "^3.1.0",
 		"prettier": "^1.10.2",
 		"pug": "^2.0.0-rc.4",
 		"pug-loader": "^2.3.0",
-		"rimraf": "^2.6.0",
-		"semver": "^5.3.0",
-		"shelljs": "^0.7.6",
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.1",
 		"stylus-resources-loader": "^0.0.4",
-		"url-loader": "^0.5.8",
-		"vue-eslint-parser": "^2.0.1",
-		"vue-loader": "^13.0.4",
-		"vue-style-loader": "^3.0.3",
-		"vue-template-compiler": "^2.4.2",
-		"webpack": "^2.6.1",
-		"webpack-bundle-analyzer": "^2.2.1",
-		"webpack-dev-middleware": "^1.10.0",
-		"webpack-hot-middleware": "^2.18.0",
-		"webpack-merge": "^4.1.0"
+		"tslint": "^5.9.1",
+		"tslint-config-prettier": "^1.8.0",
+		"tslint-config-standard": "^7.0.0",
+		"typescript": "^2.7.2",
+		"vue-template-compiler": "^2.5.13"
 	},
-	"engines": {
-		"node": ">= 4.0.0",
-		"npm": ">= 3.0.0"
-	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not ie <= 8"
-	]
+	"browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
+	"license": "MIT"
 }
