Converted Profile components

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
+		"@types/lodash": "^4.14.113",
 		"vue": "^2.5.13",
 		"vue-class-component": "^6.0.0",
 		"vue-meta": "^1.4.3",
@@ -35,6 +36,10 @@
 		"typescript": "^2.7.2",
 		"vue-template-compiler": "^2.5.13"
 	},
-	"browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	],
 	"license": "MIT"
 }
