--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
 	"private": true,
 	"scripts": {
 		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
+		"build": "vue-cli-service build --modern",
+		"lint": "vue-cli-service lint",
+		"deploy": "yarn build && firebase deploy"
 	},
 	"dependencies": {
 		"@types/lodash": "^4.14.113",
