--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@vue/cli-plugin-typescript": "^3.0.0-beta.1",
 		"@vue/cli-service": "^3.0.0-beta.1",
 		"postcss-cssnext": "^3.1.0",
+		"prerender-spa-plugin": "^3.3.0",
 		"prettier": "^1.10.2",
 		"pug": "^2.0.0-rc.4",
 		"pug-loader": "^2.3.0",
