--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 		"deploy": "yarn build && firebase deploy"
 	},
 	"dependencies": {
-		"@types/lodash": "^4.14.113",
 		"vue": "^2.5.13",
 		"vue-analytics": "^5.12.2",
 		"vue-class-component": "^6.0.0",
@@ -39,10 +38,6 @@
 		"typescript": "^2.7.2",
 		"vue-template-compiler": "^2.5.13"
 	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not ie <= 8"
-	],
+	"browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
 	"license": "MIT"
 }
