--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build --modern",
 		"lint": "vue-cli-service lint",
-		"deploy": "yarn build && firebase deploy"
+		"deploy": "npm run build && firebase deploy"
 	},
 	"dependencies": {
+		"pug-plain-loader": "^1.0.0",
+		"style-resources-loader": "^1.2.1",
 		"vue": "^2.5.13",
 		"vue-analytics": "^5.12.2",
 		"vue-class-component": "^6.0.0",
@@ -31,13 +33,16 @@
 		"pug-loader": "^2.3.0",
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.1",
-		"stylus-resources-loader": "^0.0.4",
 		"tslint": "^5.9.1",
 		"tslint-config-prettier": "^1.8.0",
 		"tslint-config-standard": "^7.0.0",
 		"typescript": "^2.7.2",
 		"vue-template-compiler": "^2.5.13"
 	},
-	"browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	],
 	"license": "MIT"
 }
