--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "cp -r ./static ./dist && npm run build"
+  command = "npm run build && cp -r ./static ./dist"
   publish = "dist"
